Fix misaligned search clear button

--- a/static/sass/_pattern_navigation.scss
+++ b/static/sass/_pattern_navigation.scss
@@ -178,10 +178,6 @@ $ubuntu-logo-width--mobile: $ubuntu-logo-svg-width + 2 * $sph-inner;
           width: 2rem;
         }
 
-        &__reset {
-          right: 2rem;
-        }
-
         &__input {
           border-radius: $border-radius;
         }
